--- a/project.css
+++ b/project.css
@@ -59,13 +59,16 @@ grid-column-start: 2;
 grid-column-end: 4;
 grid-row-start: 3;
 grid-row-end: 4;
- 
+background-image: url(https://images.unsplash.com/photo-1547756536-cde3673fa2e5?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aG9nd2FydHMlMjBleHByZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80);
+ height: 300px;
+background-size: cover;
+background-position: center;
+margin: 80px 100px 30px 0px
 }
-.i4 img{width: 950px;
-    padding :40px 40px 40px 0px;
+
 
    
-}
+
 .i5{grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 5;
@@ -91,3 +94,4 @@ padding: 0px 90px 0px 30px;}
     grid-row-start: 3;
     grid-row-end: 4;
 }
+
