--- a/fr.css
+++ b/fr.css
@@ -2,10 +2,16 @@
     margin: 0;
     box-sizing: border-box;}
 body{font-size: 14px;
-    background-color: white;
+
     display: grid;
     grid-template-columns: 250px  auto auto auto;
-    grid-template-rows: auto auto auto auto auto auto auto;}
+    grid-template-rows: auto auto auto auto auto auto auto;
+background-image: url(https://cdn.pixabay.com/photo/2016/02/21/11/33/star-1213455_1280.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center ;
+color: white;
+line-height: 2;}
  .head{
 grid-column-start: 2;
 grid-column-end: 5;
@@ -15,8 +21,8 @@ justify-content: flex-end;
 font-size: 1.5em;
 margin-right: 60px;
 }
-.head a{color:black;
-    background-color: white;
+.head a{color: white;
+   
     text-decoration: none;
     margin: 40px 45px 20px 40px;
     cursor: pointer;
@@ -26,7 +32,9 @@ margin-right: 60px;
      opacity: 0.5;}
  .g{
      grid-area: 2/2/3/5;
-     margin-left: 40px;
+     margin: 0px 100px 40px 40px;
+     height: 1px;
+     background-color:white;
 }
  .logo{
     grid-area: 1/1/7/2;}
@@ -40,27 +48,40 @@ margin-right: 60px;
     background-position: center;
     height:500px;
     margin: 20px 100px 20px 40px;
+    border: solid;
 }
  .harry{
 grid-area: 4/2/5/3;
-padding-left: 40px;
-padding-top: 50px;
-padding-bottom: 40px;}
-.harry img{height: 300px;}
+margin: 50px 40px 40px 40px;
+
+}
+.harry img{height: 300px;
+border: solid;}
  .hcont{
 grid-area: 4/3/5/5;
-margin: 45px 100px 20px 40px; }
+margin: 45px 100px 20px 40px; 
+line-height: 1.5;
+font-size: 1.05em;}
 
  .hecont{
 grid-area: 5/2/6/4;
-padding: 45px 80px 20px 40px;}
+padding: 45px 0px 20px 40px;
+font-size: 1.05em;}
  .her{
 grid-area: 5/4/6/5;
-margin: 40px 100px 40px 0px;}
-.her img{height: 300px;}
- .ron{background-color:skyblue;
-grid-area: 6/2/7/3;}
- .roncont{background-color: orange;
-grid-area:6/3/7/5 ;}
+margin: 40px 100px 0px 40px;
+}
+.her img{height: 300px;
+    border: solid;}
+ .ron{
+grid-area: 6/2/7/3;
+margin: 85px 40px 85px 40px ;
+}
+.ron img{height: 300px;
+border: solid;}
+ .roncont{
+grid-area:6/3/7/5 ;
+margin: 85px 100px 20px 40px; 
+font-size: 1.05em;}
 .footer{background-color: peru;
 grid-area: 7/1/8/5;}
