--- a/project.css
+++ b/project.css
@@ -5,7 +5,14 @@ body{font-size: 14px;
 background-color: white;
 display: grid;
 grid-template-columns:250px auto auto;
-grid-template-rows: auto auto auto auto auto
+grid-template-rows: auto auto auto auto auto;
+background-image: url(https://cdn.pixabay.com/photo/2016/02/21/11/33/star-1213455_1280.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center ;
+color: white;
+
+
 ;
 }
 .i1
@@ -19,8 +26,7 @@ font-size: 1.5em;
 margin-right: 60px;
    
 }
-.i1 a{color:black;
-background-color: white;
+.i1 a{color: white;
 text-decoration: none;
 margin: 40px 45px 20px 40px;
 cursor: pointer;
@@ -64,7 +70,8 @@ background-image: url(https://images.unsplash.com/photo-1547756536-cde3673fa2e5?
  height: 300px;
 background-size: cover;
 background-position: center;
-margin: 80px 100px 30px 0px
+margin: 80px 100px 30px 0px;
+border: solid;
 }
 
 
@@ -74,25 +81,34 @@ margin: 80px 100px 30px 0px
     grid-column-end: 4;
     grid-row-start: 5;
     grid-row-end: 6;
-    height: 400px;
+
+margin: 40px 20px 0px 20px;
+border: solid;
+   
+  
+    
+
     
 
 
 }
 .i5 img{width: 100%;
-padding: 40px 20px 0px 20px;}
+}
 .i6{grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 4;
     grid-row-end: 5;
-
-
-font-weight: lighter;
-padding: 0px 90px 0px 30px;}
+padding: 6px 90px 0px 0px;
+margin-left: 250px;
+font-size: 1.05em;}
 .i7{
     grid-column-start: 2;
     grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
+    margin-right: 100px;
+    height: 1px;
+    background-color: white;
+
 }
 
