--- a/fr.css
+++ b/fr.css
@@ -52,14 +52,14 @@ margin-right: 60px;
 }
  .harry{
 grid-area: 4/2/5/3;
-margin: 50px 40px 40px 40px;
+margin: 55px 40px 40px 40px;
 
 }
 .harry img{height: 300px;
 border: solid;}
  .hcont{
 grid-area: 4/3/5/5;
-margin: 45px 100px 20px 40px; 
+margin: 45px 100px 20px 0px; 
 line-height: 1.5;
 font-size: 1.05em;}
 
@@ -75,13 +75,22 @@ margin: 40px 100px 0px 40px;
     border: solid;}
  .ron{
 grid-area: 6/2/7/3;
-margin: 85px 40px 85px 40px ;
+margin: 60px 40px 20px 40px ;
+
 }
 .ron img{height: 300px;
-border: solid;}
+border: solid;
+
+}
  .roncont{
 grid-area:6/3/7/5 ;
-margin: 85px 100px 20px 40px; 
+margin: 40px 100px 20px 0px; 
 font-size: 1.05em;}
-.footer{background-color: peru;
-grid-area: 7/1/8/5;}
+.footer{
+grid-area: 7/1/8/5;
+margin: 40px 20px 0px 20px;
+border: solid;
+height: 96px;
+}
+.footer img{width: 100%;
+}
