start doing hogwarts

--- a/fr.css
+++ b/fr.css
@@ -1,96 +1,127 @@
-*{padding: 0;
+* {
+    padding: 0;
     margin: 0;
-    box-sizing: border-box;}
-body{font-size: 14px;
-
-    display: grid;
-    grid-template-columns: 250px  auto auto auto;
-    grid-template-rows: auto auto auto auto auto auto auto;
-background-image: url(https://cdn.pixabay.com/photo/2016/02/21/11/33/star-1213455_1280.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center ;
-color: white;
-line-height: 2;}
- .head{
-grid-column-start: 2;
-grid-column-end: 5;
-display: flex;
-flex-direction: row;
-justify-content: flex-end;
-font-size: 1.5em;
-margin-right: 60px;
+    box-sizing: border-box;
 }
-.head a{color: white;
-   
+
+body {
+    font-size: 14px;
+    display: grid;
+    grid-template-columns: 250px auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto auto;
+    background-image: url(https://cdn.pixabay.com/photo/2016/02/21/11/33/star-1213455_1280.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: white;
+    line-height: 2;
+}
+
+.head {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    font-size: 1.5em;
+    margin-right: 60px;
+}
+
+.head a {
+    color: white;
     text-decoration: none;
     margin: 40px 45px 20px 40px;
     cursor: pointer;
     height: fit-content;
-    }
-    .head a:hover{
-     opacity: 0.5;}
- .g{
-     grid-area: 2/2/3/5;
-     margin: 0px 100px 40px 40px;
-     height: 1px;
-     background-color:white;
 }
- .logo{
-    grid-area: 1/1/7/2;}
-    .logo img{width: 250px;
-        padding: 20px;
-        position: fixed;}
- .pic{
+
+.head a:hover {
+    opacity: 0.5;
+}
+
+.g {
+    grid-area: 2/2/3/5;
+    margin: 0px 100px 40px 40px;
+    height: 1px;
+    background-color: white;
+}
+
+.logo {
+    grid-area: 1/1/7/2;
+}
+
+.logo img {
+    width: 250px;
+    padding: 20px;
+    position: fixed;
+}
+
+.pic {
     grid-area: 3/2/4/5;
     background-image: url(https://images7.alphacoders.com/675/thumb-1920-675414.jpg);
     background-size: cover;
     background-position: center;
-    height:500px;
+    height: 500px;
     margin: 20px 100px 20px 40px;
     border: solid;
 }
- .harry{
-grid-area: 4/2/5/3;
-margin: 55px 40px 40px 40px;
 
+.harry {
+    grid-area: 4/2/5/3;
+    margin: 55px 40px 40px 40px;
 }
-.harry img{height: 300px;
-border: solid;}
- .hcont{
-grid-area: 4/3/5/5;
-margin: 45px 100px 20px 0px; 
-line-height: 1.5;
-font-size: 1.05em;}
 
- .hecont{
-grid-area: 5/2/6/4;
-padding: 45px 0px 20px 40px;
-font-size: 1.05em;}
- .her{
-grid-area: 5/4/6/5;
-margin: 40px 100px 0px 40px;
+.harry img {
+    height: 300px;
+    border: solid;
 }
-.her img{height: 300px;
-    border: solid;}
- .ron{
-grid-area: 6/2/7/3;
-margin: 60px 40px 20px 40px ;
 
+.hcont {
+    grid-area: 4/3/5/5;
+    margin: 45px 100px 20px 0px;
+    line-height: 1.5;
+    font-size: 1.05em;
 }
-.ron img{height: 300px;
-border: solid;
 
+.hecont {
+    grid-area: 5/2/6/4;
+    padding: 45px 0px 20px 40px;
+    font-size: 1.05em;
 }
- .roncont{
-grid-area:6/3/7/5 ;
-margin: 40px 100px 20px 0px; 
-font-size: 1.05em;}
-.footer{
-grid-area: 7/1/8/5;
-margin: 40px 20px 0px 20px;
-border: solid;
-height: 96px;
+
+.her {
+    grid-area: 5/4/6/5;
+    margin: 40px 100px 0px 40px;
 }
-.footer img{width: 100%;
+
+.her img {
+    height: 300px;
+    border: solid;
+}
+
+.ron {
+    grid-area: 6/2/7/3;
+    margin: 60px 40px 20px 40px;
+}
+
+.ron img {
+    height: 300px;
+    border: solid;
+}
+
+.roncont {
+    grid-area: 6/3/7/5;
+    margin: 40px 100px 20px 0px;
+    font-size: 1.05em;
+}
+
+.footer {
+    grid-area: 7/1/8/5;
+    margin: 40px 20px 0px 20px;
+    border: solid;
+    height: 96px;
+}
+
+.footer img {
+    width: 100%;
 }
