--- a/hogwarts.css
+++ b/hogwarts.css
@@ -8,7 +8,7 @@
         font-size: 14px;
         display: grid;
         grid-template-columns: 250px auto;
-        grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto;
+        grid-template-rows: auto auto auto auto auto auto auto auto auto;
         background-image: url(https://cdn.pixabay.com/photo/2016/02/21/11/33/star-1213455_1280.jpg);
         background-repeat: no-repeat;
         background-size: cover;
@@ -198,25 +198,46 @@
         font-size: 1.05em;
     }
     
-    .k img {
+    .p {
         margin-top: 10px;
         width: 200px;
         border: solid;
     }
     
     .c {
-        background-color: dimgrey;
+        margin: 0px 100px 40px 40px;
+        display: flex;
+        flex-direction: row;
         grid-area: 6/2/7/3;
     }
     
-    .cr {
-        background-color: fuchsia;
+    .c1 {
+        margin-left: 40px;
+        font-size: 1.05em;
+    }
+    
+    .dia {
+        margin: 0px 100px 40px 40px;
+        display: flex;
+        flex-direction: row;
         grid-area: 7/2/8/3;
     }
     
-    .n {
-        background-color: gold;
+    .dia1 {
+        margin-left: 40px;
+        font-size: 1.05em;
+    }
+    
+    .loc {
+        margin: 0px 100px 40px 40px;
+        display: flex;
+        flex-direction: row;
         grid-area: 8/2/9/3;
+    }
+    
+    .loc1 {
+        margin-left: 40px;
+        font-size: 1.05em;
     }
     
     .r {
@@ -225,6 +246,11 @@
     }
     
     .footer {
-        background-color: lawngreen;
-        grid-area: 10/1/11/3;
+        grid-area: 9/1/10/3;
+        margin: 40px 20px 1px 20px;
+    }
+    
+    .footer img {
+        width: 100%;
+        border: solid;
     }
